--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,11 @@
 .app-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 20px 50px;
 }
 
 .header-title {
+  margin: 0;
   color: #4CAF50;
 }
