--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,7 +5,7 @@
       <form [formGroup]="registerForm">
         <div class="form-group">
           <label>Email address</label>
-          <input type="email" formControlName="email" class="form-control">
+          <input type="email" class="form-control" formControlName="email">
         </div>
         <div class="form-group">
           <label>Password</label>
