--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,25 +1,44 @@
 <div class="container">
   <app-header></app-header>
-  <div class="row">
-    <div class="col-md-4 col-md-offset-4 content">
-      <div class="card" style="width: 20rem;">
-        <img class="card-img-top image" [src]="user.image" alt="Card image cap" *ngIf='user.provider != "password"'>
-        <div class="card-body">
-          <h4 class="card-title">{{user.name}}</h4>
-        </div>
-        <div>
-          <p class="card-text">Congrats have subscribed to another useless service</p>
-        </div>
-        <div *ngIf='user.provider === "password"' class="card-body">
-          <form [formGroup]="profileForm">
-            <div class="form-group">
-              <label>Your name</label>
-              <input type="text" formControlName="name" class="form-control" required>
-            </div>
-            <button (click)="save(profileForm.value)" class="btn btn-primary">Save</button>
-          </form>
+  <div class="main-content">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 content">
+        <div class="card" style="width: 20rem;">
+          <img class="card-img-top image" [src]="user.image" alt="Card image cap">
+          <div class="card-body">
+            <h4 class="card-title">{{user.name}}</h4>
+          </div>
+          <h3>My Trips</h3>
         </div>
       </div>
+    </div>
+    <div class="trip-table">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th class="table-header" scope="col">Trip Name</th>
+            <th class="table-header" scope="col">Days</th>
+            <th class="table-header" scope="col">Day Cost</th>
+            <th class="table-header" scope="col">Tickets Cost</th>
+            <th class="table-header" scope="col">Hotel Cost</th>
+            <th class="table-header" scope="col">Transport Cost</th>
+            <th class="table-header" scope="col">Start City</th>
+            <th class="table-header" scope="col">End City</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let trip of trips | async">
+            <th scope="row">{{trip.tripName}}</th>
+            <td>{{trip.days}}</td>
+            <td>{{trip.dayCost}}</td>
+            <td>{{trip.ticketsCost}}</td>
+            <td>{{trip.hotelCost}}</td>
+            <td>{{trip.transportCost}}</td>
+            <td>{{trip.startCity}}</td>
+            <td>{{trip.endCity}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
   <app-footer></app-footer>
